*  运输单链接增加属性 target="_blank"

--- a/core/app/views/ShipPlans/index.html
+++ b/core/app/views/ShipPlans/index.html
@@ -145,7 +145,7 @@
           <td>
             <dl>
                 #{list items:plan.relateShipment(), as:'sp'}
-                  <li><a href="@{Shipments.show(sp.id)}">${sp}</a></li>
+                  <li><a href="@{Shipments.show(sp.id)}" target="_blank">${sp}</a></li>
                 #{/list}
             </dl>
           </td>
