*  指定搜索框宽度为 200

--- a/core/app/views/ShipPlans/index.html
+++ b/core/app/views/ShipPlans/index.html
@@ -47,8 +47,8 @@
 
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" class="input-medium" name="p.search" value="${p.search}" rel="popover"
-                 content="可搜索 ID、采购计划 ID、SellingId、SKU、FBA、产品名称" placement="bottom">
+          <input type="text" name="p.search" value="${p.search}" rel="popover"
+                 content="可搜索 ID、采购计划 ID、SellingId、SKU、FBA、产品名称" placement="bottom" style="width:200px;">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
