--- a/core/app/views/ProcureUnits/indexForMarket.html
+++ b/core/app/views/ProcureUnits/indexForMarket.html
@@ -65,7 +65,7 @@
       <div class="span12">
         <input type="button" class="btn btn-primary" id="batch_create_fba_btn" value="批量创建FBA"
                data-url="@{ProcureUnits.batchCreateFBA()}">
-        <a href="@{ProcureUnits.blank()}" class="btn btn-success" data-disable-with="loading">创建采购计划</a>
+        <a href="@{ProcureUnits.blank()}" class="btn btn-success">创建采购计划</a>
         <a target="_blank" href="@{ProcureUnits.exportLogs()}" class="btn btn-info">导出修改日志</a>
       #{power.ck "procures.downloadreports"}
         <a href="javascript:void(0)" id="download_excel" class="btn btn-info">导出采购计划</a>
