增加字段已经修改字段名称

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -100,7 +100,7 @@
           <th rowspan="2" style="width:60px;">实际出货数量</th>
           <th rowspan="2" style="width:70px;">去往国家</th>
           <th rowspan="2" style="width:70px;">运输方式</th>
-          <th rowspan="2" style="width:120px;">仓库</th>
+          <th rowspan="2" style="width:120px;">去往仓库</th>
           <th rowspan="2" style="width:80px;">出库对象</th>
           <th colspan="6" style="width:380px;">主箱</th>
           <th colspan="6" style="width:380px;">尾箱</th>
