--- a/core/app/views/ShipItems/planIndex.html
+++ b/core/app/views/ShipItems/planIndex.html
@@ -64,15 +64,15 @@
     <table class="table table-bordered table-condensed">
       <tr>
         <th><label><input type="checkbox" class="checkall"></label></th>
-        <th>出库计划ID</th>
+        <th>出库计划</th>
         <th>Selling ID</th>
         <th>SKU</th>
         <th>产品名称</th>
         <th>FBA</th>
         <th>去往仓库</th>
-        <th>FBA仓库</th>
+        <th>CenterId</th>
         <th>计划出库数</th>
-        <th>预计发货时间</th>
+        <th>预计运输时间</th>
         <th>预计到库时间</th>
         <th>运输方式</th>
         <th>报关类型</th>
