--- a/core/app/views/Shipments/_shipment_list.html
+++ b/core/app/views/Shipments/_shipment_list.html
@@ -6,9 +6,9 @@
     <th style="width:6%">状态</th>
     <th style="width:10%">运输商</th>
     <th style="width:5%">国际快递</th>
-    <th style="width:6%">运输方式</th>
-    <th style="width:8%">去往仓库</th>
-    <th style="width:7%">预计开始时间</th>
+    <th style="width:8%">运输方式</th>
+    <th style="width:6%">去往仓库</th>
+    <th style="width:7%">预计运输时间</th>
     <th style="width:7%">实际运输时间</th>
     <th style="width:7%">预计到库时间</th>
     <th style="width:7%">实际到库时间</th>
