--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -102,33 +102,31 @@
       <table class="table table-condensed table-bordered">
         <tr>
           <th>
-            <label class="checkbox">
-              <input type="checkbox" id="unit_checkbox_all" class="unit checkall">
-            </label>
+            <label class="checkbox"><input type="checkbox" id="unit_checkbox_all" class="unit checkall"></label>
           </th>
           <th style="width:40px;">#</th>
-          <th>状态</th>
-          <th>Selling</th>
           <th>Sku</th>
-          <th style="width:10%;">产品名称</th>
+          <th style="width:10%;">产品简称</th>
+          <th>FnSku</th>
+          <th>FBA</th>
           <th>数量(计划/交货/入库)</th>
           <th>预计交货时间</th>
           <th>实际交货时间</th>
           <th>入库时间</th>
+          <th>预计运输时间</th>
+          <th>去往仓库</th>
+          <th>运输方式</th>
+          <th>采购单</th>
+          <th>出货单</th>
+          <th>质检结果</th>
+          <th>状态</th>
+          <th>创建时间</th>
+          <th>创建人</th>
+          <th>Selling</th>
           <th>供应商</th>
           <th>单价</th>
           <th>总价</th>
           <th>剩余请款额</th>
-          <th>FBA</th>
-          <th>去往仓库</th>
-          <th>预计运输时间</th>
-          <th>运输方式</th>
-          <th>FnSku</th>
-          <th>质检结果</th>
-          <th>采购单</th>
-          <th>出货单</th>
-          <th>创建时间</th>
-          <th>创建人</th>
         </tr>
       #{list items:units, as:'unit'}
         <tr id="procureUnit_${unit.id}">
@@ -140,38 +138,8 @@
             </label>
           </td>
           <td><a href="@{ProcureUnits.edit(unit.id)}" target="_blank">${unit.id}</a></td>
-          <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
-          <td class="selling_id">
-            <a href="@{Sellings.selling(unit.selling?.sellingId)}" target="_blank">${unit.selling?.sellingId}</a>
-          </td>
-          <td>
-            <a href="@{Products.show(unit.sku)}" target="_blank">${unit.sku}</a>
-          </td>
+          <td><a href="@{Products.show(unit.sku)}" target="_blank">${unit.sku}</a></td>
           <td>${unit.product.abbreviation}</td>
-          <td>
-              #{set qtys: unit.qtys()/}
-            <span>${qtys._1 == null ? 0 : qtys._1}</span>
-            /<span style="${qtys._1 != null && qtys._2 != null && qtys._2 < qtys._1 ? 'color:red' : ''}">${qtys._2 == null ? 0 : qtys._2}</span>
-            /<span style="${qtys._2 != null && qtys._3 != null && qtys._3 < qtys._2 ? 'color:red' : ''}">${qtys._3 == null ? 0 : qtys._3}</span>
-          </td>
-          <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
-          <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
-          <td>#{time_tooltip time:unit.inboundRecord()?.completeDate/}</td>
-          <td>
-            <select name="unitCooperator" style="width:100px;" ${unit.deliveryment != null ? 'disabled' : ''}>
-                #{list items:unit.availableCooperators(), as:'cop'}
-                  <option ${cop.id == unit.cooperator?.id ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
-                #{/list}
-            </select>
-          </td>
-            #{set prices: unit.prices()/}
-          <td>${unit.attrs?.currency?.symbol()} ${prices?._1?.format('#,###.##')}</td>
-          <td>${unit.attrs?.currency?.symbol()} ${prices?._2?.format('#,###.##')}</td>
-          <td>${unit.attrs?.currency?.symbol()} ${prices?._3?.format('#,###.##')}</td>
-          <td>${unit.fba?.shipmentId}</td>
-          <td>${unit.whouse?.name()}</td>
-          <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
-          <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}</td>
           <td>
             <!-- FnSku 下载 Label -->
               #{if unit.selling?.fnSku}
@@ -185,7 +153,19 @@
                 </a>
               #{/elseif}
           </td>
-          <td>${unit.result()}</td>
+          <td>${unit.fba?.shipmentId}</td>
+          <td>
+              #{set qtys: unit.qtys()/}
+            <span>${qtys._1 == null ? 0 : qtys._1}</span>
+            /<span style="${qtys._1 != null && qtys._2 != null && qtys._2 < qtys._1 ? 'color:red' : ''}">${qtys._2 == null ? 0 : qtys._2}</span>
+            /<span style="${qtys._2 != null && qtys._3 != null && qtys._3 < qtys._2 ? 'color:red' : ''}">${qtys._3 == null ? 0 : qtys._3}</span>
+          </td>
+          <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
+          <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
+          <td>#{time_tooltip time:unit.inboundRecord()?.completeDate/}</td>
+          <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
+          <td>${unit.whouse?.name()}</td>
+          <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}</td>
           <td>
               #{if unit.deliveryment}
                 <a href="@{Deliveryments.show(unit.deliveryment.id)}">${unit.deliveryment.id}</a>
@@ -196,8 +176,25 @@
                 <a href="@{DeliverPlans.show(unit.deliverplan.id)}">${unit.deliverplan.id}</a>
               #{/if}
           </td>
+          <td>${unit.result()}</td>
+          <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
           <td>#{time_tooltip time:unit.createDate/}</td>
           <td>${unit.creator?.username}</td>
+
+          <td class="selling_id">
+            <a href="@{Sellings.selling(unit.selling?.sellingId)}" target="_blank">${unit.selling?.sellingId}</a>
+          </td>
+          <td>
+            <select name="unitCooperator" style="width:100px;" ${unit.deliveryment != null ? 'disabled' : ''}>
+                #{list items:unit.availableCooperators(), as:'cop'}
+                  <option ${cop.id == unit.cooperator?.id ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
+                #{/list}
+            </select>
+          </td>
+            #{set prices: unit.prices()/}
+          <td>${unit.attrs?.currency?.symbol()} ${prices?._1?.format('#,###.##')}</td>
+          <td>${unit.attrs?.currency?.symbol()} ${prices?._2?.format('#,###.##')}</td>
+          <td>${unit.attrs?.currency?.symbol()} ${prices?._3?.format('#,###.##')}</td>
         </tr>
       #{/list}
       </table>
