*  增加 box content info  js 操作

--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -154,6 +154,7 @@
   <input id='form_method' type="hidden" name="x-http-method-override" value="POST">
 
 #{include 'Deliveryments/box_number_model.html'/}
+#{include 'Deliveryments/fba_carton_contents.html'/}
 </form>
 *{ TODO 这个对 http://e.easya.cc/deliveryment/DL%7C201310%7C01 有问题}*
 *{#{power.ck 'excels.deliveryment'}}*
