--- a/core/app/views/Deliveryments/fba_carton_contents.html
+++ b/core/app/views/Deliveryments/fba_carton_contents.html
@@ -1,3 +1,6 @@
+#{set 'moreScripts'}
+    #{script 'deliveryments/fba_carton_contents.coffee'/}
+#{/set}
 <div id="fba_carton_contents_modal" class="modal hide fade">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
