--- a/core/app/views/gt_templates/feeds.html
+++ b/core/app/views/gt_templates/feeds.html
@@ -12,7 +12,7 @@
     <td>${feed.analyzeResult}</td>
     <td>
         #{if fid}
-          <a class="btn-mini btn-warning" href="@{FBAs.reSubmit(fid, feed.id)}" target="_blank">重新提交</a>
+          <a class="btn-small btn-danger" href="@{FBAs.reSubmit(fid, feed.id)}" target="_blank">重新提交</a>
         #{/if}
     </td>
   </tr>
