*  重新提交按钮增加权限校验

--- a/core/app/views/gt_templates/feeds.html
+++ b/core/app/views/gt_templates/feeds.html
@@ -12,7 +12,9 @@
     <td>${feed.analyzeResult}</td>
     <td>
         #{if fid}
-          <a class="btn-small btn-danger" href="@{FBAs.reSubmit(fid, feed.id)}" target="_blank">重新提交</a>
+            #{power.ck 'fbas.update'}
+              <a class="btn-small btn-danger" href="@{FBAs.reSubmit(fid, feed.id)}" target="_blank">重新提交</a>
+            #{/power.ck}
         #{/if}
     </td>
   </tr>
