*  增加尾箱输入框

--- a/core/app/views/Deliveryments/fba_carton_contents.html
+++ b/core/app/views/Deliveryments/fba_carton_contents.html
@@ -12,7 +12,10 @@
           <abbr title="多少个箱子">箱数</abbr>
         </td>
         <td>
-          <abbr title="单个箱子内货物的个数">个数</abbr>
+          <abbr title="单个主箱内货物的个数">个数(主箱)</abbr>
+        </td>
+        <td>
+          <abbr title="单个尾箱内货物的个数(默认只有一个尾箱)">个数(尾箱)</abbr>
         </td>
         <td>
           <abbr title="单个箱子的重量">箱重(lbs.)</abbr>
