*  校验数量是否一致

--- a/core/app/views/Deliveryments/fba_carton_contents.html
+++ b/core/app/views/Deliveryments/fba_carton_contents.html
@@ -9,7 +9,7 @@
       <tr>
         <td>采购计划</td>
         <td>
-          <abbr title="多少个箱子">箱数</abbr>
+          <abbr title="多少个箱子(不包含尾箱)">箱数(仅含主箱)</abbr>
         </td>
         <td>
           <abbr title="单个主箱内货物的个数">个数(主箱)</abbr>
