--- a/core/app/views/ShipPlans/_form.html
+++ b/core/app/views/ShipPlans/_form.html
@@ -72,7 +72,7 @@
 </tr>
 <tr>
   <td colspan="4">
-    <h4>Memo</h4>
+    <h4>Memo <span style="color:red">(注意：变更计划必须写变更情况，如：“由海运改为空运“)</span></h4>
     <textarea rows="8" class="input-block-level" name="plan.memo" id="memo">${plan.memo.raw()}</textarea>
   </td>
 </tr>
