--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -145,12 +145,12 @@
               <a href="@{ProcureUnits.edit(r.shipPlan?.unit?.id, 'show')}" target="_blank">${r.shipPlan?.unit?.id}</a>
           </td>
           <td><a href="@{Products.show(r.shipPlan?.product?.sku)}" target="_blank">${r.shipPlan?.product?.sku}</a></td>
-          <td title="${r.shipPlan?.product.abbreviation}">
-              #{if r.shipPlan?.product.abbreviation.length() <= 20}
-              ${r.shipPlan?.product.abbreviation}
+          <td title="${r.shipPlan?.product?.abbreviation}">
+              #{if r.shipPlan?.product?.abbreviation.length() <= 20}
+              ${r.shipPlan?.product?.abbreviation}
               #{/if}
               #{else }
-              ${r.shipPlan?.product.abbreviation.substring(0,20)}...
+              ${r.shipPlan?.product?.abbreviation.substring(0,20)}...
               #{/else}
           </td>
           <td title="${r.shipPlan?.memo}">
@@ -161,11 +161,11 @@
               ${r.shipPlan?.memo.substring(0,7)}...
               #{/else}
           </td>
-          <td>${r.shipPlan?.fba.shipmentId}</td>
+          <td>${r.shipPlan?.fba?.shipmentId}</td>
           <td>#{time_tooltip time:r.shipPlan?.planShipDate /}</td>
           <td>${r.planQty}</td>
           <td><input type="text" name="qty" value="${r.qty}" style="width:45px;"></td>
-          <td>${r.shipPlan?.whouse.name}</td>
+          <td>${r.shipPlan?.whouse?.name}</td>
           <td>${r.shipPlan?.shipType?.label()}</td>
           <td>
             <select name="whouse" style="width: 100px;" data-value="${r.whouse?.name}">
