--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -53,7 +53,7 @@
         <tr>
           <th>有无 Selling</th>
           <td colspan="3">
-            <input type="checkbox" name="dmt.haveSelling" value="${true}" ${dmt.haveSelling ? 'checked' : ''}>
+            <input type="checkbox" name="dmt.haveSelling" value="${true}" ${dmt.haveSelling ? 'checked' : ''}>有
           </td>
         </tr>
         <tr>
