--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -48,14 +48,14 @@
                 <input type="checkbox" name="pids" value="${unit.id}" class="${tr_key}" id="checkbox_${unit.id}"
                        data-boxnum="${dto.boxNum}" data-num="${dto.num}" data-lastcartonnum="${dto.lastCartonNum}"
                        data-singleboxweight="${dto.singleBoxWeight}" data-length="${dto.length}"
-                       data-width="${dto.width}" data-height="${dto.width}">
+                       data-width="${dto.width}" data-height="${dto.height}">
               #{/if}
               #{else}
                 <input type="checkbox" name="pids" value="${unit.id}" class="${tr_key}" id="checkbox_${unit.id}"
                        data-boxnum="${cooperItem.boxNum(unit.qty())}" data-num="${cooperItem.boxSize}"
                        data-lastcartonnum="${cooperItem.lastCartonNum(unit.qty())}"
                        data-singleboxweight="${cooperItem.singleBoxWeight}" data-length="${cooperItem.length}"
-                       data-width="${cooperItem.width}" data-height="${cooperItem.width}">
+                       data-width="${cooperItem.width}" data-height="${cooperItem.height}">
               #{/else}
           </label>
         </td>
